using an ajax call, current weather conditions populate current-weather div when city button is clicked on

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
             </div>
             <div class="col-lg-8">
                 <div class="current-weather border">
-                    <h3 id="cityName">Atlanta (1/13/2020)</h3>
-                    <p id="temp">Temperature:</p>
-                    <p id="humidity">Humidity:</p>
+                    <h3 id="cityName"></h3>
+                    <p id="temp"></p>
+                    <p id="humidity"></p>
                     <p id="wind-speed"></p>
                     <p id="uv-index"></p>
                 </div>
 
-                <div class="forecast"></div>
+                <div class="forecast">
+                    <h3>5-Day Forecast:</h3>
+                </div>
             </div>
         </div>
     </div>
