weather icon appears next to city name when city is selected

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <input type="text" class="form-control new-city" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                         <button type="button" class="btn btn-info citySearch">
-                            <span class="glyphicon glyphicon-search"></span> Search
+                            <span class="fa fa-search">Search</span>
                         </button>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
             </div>
             <div class="col-lg-8">
                 <div class="current-weather border">
-                    <h3 id="cityName"></h3>
+                    <h3 id="cityName"></h3><img id="icon">
                     <p id="temp"></p>
                     <p id="humidity"></p>
                     <p id="wind-speed"></p>
