--- a/index.html
+++ b/index.html
@@ -28,16 +28,22 @@
                 <div class="city-history"></div>
             </div>
             <div class="col-lg-8">
-                <div class="current-weather border">
-                    <h3 id="cityName"></h3><img id="icon">
-                    <p id="temp"></p>
-                    <p id="humidity"></p>
-                    <p id="wind-speed"></p>
-                    <p id="uv-index"></p>
-                </div>
-
-                <div class="forecast">
+                    <div class="current-weather border">
+                        <h3 id="cityName"></h3><img id="icon">
+                        <p id="temp"></p>
+                        <p id="humidity"></p>
+                        <p id="wind-speed"></p>
+                        <p id="uv-index"></p>
+                    </div>
+                <div>
                     <h3>5-Day Forecast:</h3>
+                    <div class="row forecast">
+                        <!-- <div class="col col-1"></div>
+                        <div class="col col-2"></div>
+                        <div class="col col-3"></div>
+                        <div class="col col-4"></div>
+                        <div class="col col-5"></div> -->
+                    </div>
                 </div>
             </div>
         </div>
