weather is displayed for city when user presses search button

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                         </button>
                     </div>
                 </div>
-                <div class="city-history"></div>
+                <div class="search-history"></div>
             </div>
             <div class="col-lg-8">
                     <div class="current-weather border">
-                        <h3 id="cityName"></h3><img id="icon">
+                        <h3 id="city-name"></h3><img id="icon">
                         <p id="temp"></p>
                         <p id="humidity"></p>
                         <p id="wind-speed"></p>
@@ -37,13 +37,7 @@
                     </div>
                 <div>
                     <h3>5-Day Forecast:</h3>
-                    <div class="row forecast">
-                        <!-- <div class="col col-1"></div>
-                        <div class="col col-2"></div>
-                        <div class="col col-3"></div>
-                        <div class="col col-4"></div>
-                        <div class="col col-5"></div> -->
-                    </div>
+                    <div class="row forecast"></div>
                 </div>
             </div>
         </div>
