--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <p id="uv-index"></p>
                     </div>
                 <div>
-                    <h3>5-Day Forecast:</h3>
+                    <h3 id="forecast-title"></h3>
                     <div class="row forecast"></div>
                 </div>
             </div>
